ADD: preload numbers images on useEffect, when app is starting. show photos in img tag, not as background.  FIX:center main logo before animation

--- a/src/components/Header/components/Logo/logo.scss
+++ b/src/components/Header/components/Logo/logo.scss
@@ -1,10 +1,13 @@
 @import 'src/variables.scss';
 
+.logo-img {
+  position: relative;
+  top: 50vh;
+}
+
 .logo {
   .logo-img {
-    position: relative;
-    top: 50px;
-    animation: fade-up $animation-time;
+    animation: fade-up $animation-time forwards;
   }
 }
 
